--- a/stockcollection/src/main/resources/templates/stock/index.html
+++ b/stockcollection/src/main/resources/templates/stock/index.html
@@ -64,6 +64,21 @@
         </div>
     </footer>
 
+    <footer class="col-md-12 content">
+        <div class="col-lg-6 col-md-6 last">
+            <img src="../../img/5.jpg" alt="Image" class="tm-image">
+        </div>
+        <div class="col-lg-6 col-md-6 background last ">
+            <h2 class="section-title">KDJ  实时金叉 </h2>
+            <p class="about-text">KDJ </p>
+            <p class="about-text">KDJ </p>
+            <div>
+                <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex12()">从新开始</button>
+            </div>
+        </div>
+    </footer>
+
+
 
     <footer class="col-md-12 content" >
         <div class="col-lg-6 col-md-6 last">
@@ -255,6 +270,10 @@
         window.location.href = "/stock/toStockHsl"
     }
 
+
+    function toIndex12() {
+        window.location.href = "/stock/toStockKdjCciRegionActualtime"
+    }
 
 
     // Check scroll position and add/remove background to navbar
